# forma

./: .gitignore  .gitmodules  ARCHITECTURE.md  ASSET_BUNDLING.md  BUILD.md  BUILD_OPTIONS.md  CMakeLists.txt  HIERARCHICAL_WIDGETS.md  IMPORT_ALGORITHM.md  README.md  README.old.md  TOML.md  TYPE_CHECKING.md  forma  forma.cpp  forma.cpp.broken  forma.cpp.temp  forma.toml  forma_lsp_server_stdio  lsp_server  show_callback.cpp  syntax.md  test_animation.forma  test_assets.cpp  test_callbacks.forma  test_class.fml  test_class_parsing.forma  test_download.cpp  test_import.forma  test_lsp.sh  test_lvgl_callbacks.cpp  test_minimal.cpp  test_plugins.sh  test_simple.c  test_simple.fml  test_type_checking.cpp  tracer_demo
.github/workflows/: release.yml
Testing/: in_memory_cmake_build_tests.cpp  in_memory_integration_tests.cpp  init_tests.cpp  integration_full_stack_tests.cpp  plugin_loader_tests.cpp
cmake/: FormaCoreConfig.cmake.in
demos/: diagnostic_demo.cpp  parser_demo.cpp
docs/: DOWNLOAD_UTILITY.md  DYNAMIC_PLUGINS.md  INIT_COMMAND.md  PLUGIN_DEVELOPMENT.md  PLUGIN_METADATA.md
examples/: animation_example.forma  arrays.fml  asset_test.c  asset_test.forma  diagnostics_example.fml  forma_to_lvgl.cpp  hierarchy_test.forma  layout_example.forma  lsp_server.cpp  lvgl_demo.cpp  new_features.forma  project.toml  simple_hierarchy.c  simple_hierarchy.forma  simple_hierarchy.gen  simple_hierarchy.json  test_lsp_client.cpp  test_symbol_resolution.cpp  test_toml.cpp  type_checking_test.forma  valid_types.forma  valid_types.json
plugin-template/: .gitignore  CMakeLists.txt  README.md
plugin-template/cmake/: FormaExamplePluginConfig.cmake.in
plugin-template/examples/: example.cpp
plugin-template/src/: example_plugin.cpp  example_plugin.hpp
plugin-template/tests/: example_plugin_tests.cpp
plugins/: README.md
plugins/archive-utils/: CMakeLists.txt  FormaArchiveUtilsConfig.cmake.in  README.md  forma.toml  package.cfg
plugins/archive-utils/src/: archive.cpp  archive.hpp
plugins/c-codegen/: CMakeLists.txt  forma.toml
plugins/c-codegen/src/: c_codegen.hpp  c_codegen_plugin.cpp
plugins/c-codegen/tests/: c_codegen_tests.cpp
plugins/cmake-generator/: CMAKE_AUTO_DOWNLOAD.md  CMakeLists.txt  README.md  TOOLCHAIN_AUTO_DOWNLOAD.md  plugin.toml
plugins/cmake-generator/cmake/: FormaCMakeGeneratorConfig.cmake.in
plugins/cmake-generator/examples/: cmake-config.toml
plugins/cmake-generator/src/: cmake_downloader.hpp  cmake_generator.cpp  cmake_generator.hpp  toolchain_downloader.hpp
plugins/cpp-codegen/: CMakeLists.txt  forma.toml
plugins/cpp-codegen/src/: cpp_codegen.hpp  cpp_codegen_plugin.cpp
plugins/cpp-codegen/tests/: cpp_codegen_tests.cpp
plugins/deb-deploy/: CMakeLists.txt  README.md
plugins/deb-deploy/examples/: package.toml
plugins/deb-deploy/src/: deb_deploy.hpp  deb_deploy_plugin.cpp
plugins/deb-deploy/tests/: deb_deploy_tests.cpp
plugins/deb-release/: CMakeLists.txt  README.md
plugins/deb-release/examples/: package.cfg
plugins/deb-release/src/: deb_release.hpp  deb_release_plugin.cpp
plugins/deb-release/tests/: deb_release_tests.cpp
plugins/esp32-lvgl/: CMakeLists.txt  README.md
plugins/esp32-lvgl/examples/: esp32-config.toml  esp32_config.toml  esp32_demo.fml
plugins/esp32-lvgl/src/: esp32_build_system.hpp  esp32_lvgl_plugin.cpp  esp32_lvgl_renderer.hpp  esp32_plugin.cpp
plugins/hello-world/: README.md  forma.toml  hello_plugin.cpp
plugins/http-client/: CMakeLists.txt  FormaHTTPClientConfig.cmake.in  README.md  forma.toml  package.cfg
plugins/http-client/src/: download.cpp  download.hpp
plugins/json-renderer/: README.md  forma.toml  json_renderer.cpp
plugins/lsp-server/: CMakeLists.txt  LSP_SERVER.md  README.md  VIRTUAL_FS.md  forma.toml
plugins/lsp-server/cmake/: FormaLSPServerConfig.cmake.in
plugins/lsp-server/src/: http_server.hpp  lsp.hpp  lsp_server.cpp  lsp_server_stdio.cpp  stdio_transport.hpp  virtual_fs.hpp
plugins/lsp-server/tests/: goto_definition_tests.cpp  lsp_tests.cpp  lsp_tests.hpp  type_resolution_tests.cpp  vfs_tests.cpp
plugins/lvgl-native/: CMakeLists.txt  plugin.toml
plugins/lvgl-native/src/: lvgl_downloader.cpp  lvgl_downloader.hpp  lvgl_native_renderer.cpp  lvgl_native_renderer.hpp  sdl3_downloader.cpp  sdl3_downloader.hpp
plugins/lvgl-renderer/: ANIMATION_IMPLEMENTATION.md  CMakeLists.txt  LVGL_RENDERER.md  PLUGIN_MODE.md  README.md  forma.toml
plugins/lvgl-renderer/cmake/: FormaLVGLRendererConfig.cmake.in
plugins/lvgl-renderer/src/: lvgl_renderer.hpp  lvgl_renderer_builtin.hpp  lvgl_renderer_plugin.cpp
plugins/lvgl-renderer/tests/: lvgl_demo.cpp  lvgl_tests.cpp  lvgl_tests.hpp  show_callbacks.cpp
plugins/tracer/: ARCHITECTURE.md  CMakeLists.txt  README.md  plugin.toml
plugins/tracer/examples/: tracer_demo.cpp
plugins/tracer/src/: tracer_plugin.hpp
plugins/tracer/tests/: test_tracer.cpp
scripts/: build.sh  run_vfs_test.sh  test_lsp_server.sh
src/: plugin_hash.hpp  plugin_loader.hpp  plugin_metadata.hpp
src/commands/: build.hpp  deploy.hpp  init.hpp  release.hpp  run.hpp
src/core/: archive.cpp  assets.hpp  config.hpp  download.cpp  download.hpp  export.hpp  host_context.hpp  pipeline.hpp  plugin.hpp  plugin_utils.hpp  toml_io.hpp  toolchain.hpp
src/core/fs/: fs_copy.hpp  i_file_system.hpp
src/core/io/: stream_io.hpp  write_stream.hpp
src/parser/: diagnostics.hpp  ir.hpp  ir_types.hpp  parser.hpp  semantic.hpp  tokenizer.hpp
src/parser/tests/: diagnostic_tests.cpp  parser_tests.cpp
src/tokenizer/: forma.hpp
src/tokenizer/tests/: tokenizer_tests.cpp
src/toml/: toml.hpp
src/toml/tests/: toml_tests.cpp
test-deploy/: package.cfg  project.toml
vscode-extension/: CHANGELOG.md  DEVELOPMENT.md  IMPLEMENTATION.md  INSTALL.md  README.md  build-lsp-server.sh  example.forma  package-lock.json  package.json  setup.sh
vscode-extension/examples/: class-example.forma
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: forma.tmLanguage.json
